--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,13 +7,12 @@
       "VARIANT": "stable"
     }
   },
+  "workspaceFolder": "/mtb-workspace",
   "customizations": {
     "vscode": {
       "extensions": []
     }
   },
-  // Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-  //"remoteUser": "builder:builder",
   "forwardPorts": [
     3000
   ]
