updated image to dockerhub image

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 ARG VARIANT="stable"
-FROM pss-sw-gov-registry.vih.infineon.com/pssbuild/modus-linux-30:${VARIANT}
+FROM mlworkshop101/modus-linux-30:${VARIANT}
 
 USER root
 
